<resources>
    <string name="app_name">Parkour Spots</string>

    <string name="title_activity_spot_info">Spot info</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Search spot name</string>
    <string name="preference_file_key">se.parkourspots.PREFERENCE_FILE_KEY</string>
    <string name="search_result">Search results for:</string>
    <string name="spot_title">Spot title</string>
    <string name="good_for">Good for</string>
    <string name="good_for_b">Good for:</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_b">Difficulty:</string>
    <string name="ground_material_b">Ground material:</string>
    <string name="ground_material">Material</string>
    <string name="size_b">Size:</string>
    <string name="size">Size</string>
    <string name="description_b">Description</string>
    <string name="save">Save</string>
    <string name="new_spot">New spot</string>
    <string name="tap_for_info">Tap for info</string>
    <string name="no_title">No Title</string>
</resources>
