<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.AppCompat.Light.Dialog"
    tools:context=".MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/new_spot"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/wallet_holo_blue_light"
            android:textColor="#ffffffff"
            android:elevation="2dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/spotName"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/spot_title"
            android:singleLine="true"
            android:maxLength="20"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/description"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/description_b"
            android:singleLine="false"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/difficulty"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/difficulty"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"
            android:maxLength="1"
            android:lines="1" />

        <EditText
            android:id="@+id/ground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/ground_material"
            android:singleLine="true"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/goodFor"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/good_for"
            android:layout_weight="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/size"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/size"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"
            android:maxLength="1"
            android:lines="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/photoView"
                android:background="@android:color/background_light"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cameraButton"
                android:background="@drawable/ic_camera_big"
                android:elevation="6dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/saveNewSpot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ff73ff00"
                android:text="@string/save"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>